--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "puppeteer itau scraper",
   "main": "run.js",
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+    "go": "node run.js --branch=7071 --account=10291-2 --password=132435 --days 5"
   },
   "author": "Vinicius Gava <gava.vinicius@gmail.com>",
   "license": "MIT",
