--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs-extra": "^10.0.0",
     "mkdirp": "^1.0.4",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "nconf": "^0.11.3",
     "puppeteer": "^13.1.1",
     "uuid": "^8.3.2",
